//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.halo.credentials.identity;

import "google/protobuf/any.proto";
import "./greet.proto";
import "./signed.proto";

// Additional, descriptive information about an Identity. Must be signed by the Identity's key.
message IdentityInfo {
  bytes publicKey = 1;          // The publicKey of the Identity (must be signed by this key).
  string displayName = 2;       // The display name to use for this key.
}

// Additional, descriptive information about a Device. Must be signed by the Device's key.
message DeviceInfo {
  bytes publicKey = 1;          // The publicKey of the Device (must be signed by this key).
  string displayName = 2;       // The display name to use for this key.
}

// A notice written to the Halo when a Party is joined for the first time. This message allows other
// Devices for the same Identity to know of it and automatically connect to it as well.
// This is not the payload of a SignedMessage, simply a standalone message type.
message JoinedParty {
  bytes partyKey = 1;              // The publicKey of the Party that was joined.
  bytes deviceKey = 2;             // The publicKey of the device that initiated joining the Party.
  bytes feedKey = 3;               // The publicKey of the device that initiated joining the Party.
  repeated KeyHint hints = 4;      // An array of member publicKeys at the time of joining (used as "hints").
  string created = 10;             // RFC-3339 datetime string.
}
